azure/aks/deploy/manifest/fastapi-admin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
  namespace: ${AKS_NAMESPACE}
  labels:
    app: ${APP_NAME}
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: fastapi-rg
spec:
  type: LoadBalancer
  selector:
    app: ${APP_NAME}
  ports:
    - name: https
      port: ${APP_PORT}
      targetPort: 30443
      protocol: TCP
